Update hotels and qualmark ratings to March 2025

--- a/beta.rustforgeconf.com/index.html
+++ b/beta.rustforgeconf.com/index.html
@@ -441,6 +441,10 @@
             padding: calc(3 * var(--spacing-content)) 0;
         }
 
+        .section.major-section {
+            background-color: var(--background-color-dark);
+        }
+
 
         .blocks-regular {
             display: flex;
@@ -1923,6 +1927,12 @@
 
             <h2><span class="boost">Offers</span> for delegates</h2>
 
+            <p>
+                Important: Please choose the offers(s) that suit you best! Neither Accelerant Limited, as the legal entity behind
+                Rust Forge Conf, nor any member of the team receives any financial reward (e.g. kickbacks/referral payments) for
+                any sales generated because of these listings. These offers are for your benefit only.
+            </p>
+
             <div id="travel-offers">
                 <h3>Travel Offers</h3>
                 <p>Rust Forge 2025 is delighted to have Cathay Pacific Airways and Qantas as international travel
@@ -1948,6 +1958,7 @@
                             <li>In-bound flights to New Zealand must be within the 18-30 Aug 2025 period.</li>
                         </ul>
                     </div>
+
                     <div class="feature-box__footer">
                         <div class="feature-box__footer-blocks">
                             <div class="feature-box__footer-block-shaded">
@@ -1999,17 +2010,115 @@
                     Notes:
                 </p>
                 <ul class="arrow">
-                    <li>Indicative prices listed below are the results from manually reviewing the rates offered by each 
-                        provider using the available links. The actual rates available to you may differ.</li>
-                    <li><a href="https://www.qualmark.co.nz/">Qualmark</a> <a href="https://www.qualmark.co.nz/how-qualmark-works/sustainable-tourism-business-criteria">
-                        Sustainable Tourism Business Awards</a> were issued in November 2024.</li>
+                    <li>
+                        Providers are sorted by their Qualmark sustainability accreditation and then by walking distance to the venue.
+                    </li>
+                    <li>
+                        The Prices value has been sourced by manually reviewing the rates offered by each
+                        provider using the links or codes available to Rust Forge 2025 delegates using a browser's Private Browsing/Incognito Mode.
+                        The actual rates available to you may differ.
+                    </li>
+                    <li>
+                        The Google Business Profile Rating value is sourced from the provider's <a href="https://support.google.com/business/answer/7660515?hl=en">Google Business Profile</a> in March 2025.
+                    </li>
+                    <li>
+                        The Qualmark rating and Qualmark sustainability accreditation values are sourced from <a href="https://www.qualmark.co.nz/">Qualmark</a>'s
+                        <a href="https://web.archive.org/web/20250309213309/https://qualmark.co.nz/assets/18.-Qualmark-Licence-Holders-with-award-March-2025.xlsx">awards issued in March 2025</a>.
+                        Qualmark assesses many tourism providers in New Zealand, according to its <a href="https://www.qualmark.co.nz/how-qualmark-works/sustainable-tourism-business-criteria">Sustainable Tourism Business criteria</a>.
+                    </li>
                 </ul>
 
             </div>
 
             <div id="accommodation-offers-detail">
+                <div class="feature-box" id="ibis">  <!-- [gold] [400m] -->
+                    <div class="feature-box__body">
 
-                <div class="feature-box">
+                        <h3 class="feature-box__heading">
+                            <strong>Hotel</strong>
+                            <em>
+                                <a href="https://all.accor.com/hotel/3049/index.en.shtml">ibis Wellington</a>
+                            </em>
+                        </h3>
+
+                        <ul class="plus">
+                            <li>Prices: NZD 150-180/night (indicative)</li>
+                            <li>Distance: 3 minutes' walk from venue (400m / 0.25 miles).</li>
+                            <li>Address: 153 Featherston Street, Wellington</li>
+                            <li>Google Business Profile rating: 4 star</li>
+                            <li>Qualmark rating: 3 star plus</li>
+                            <li>Qualmark sustainability accreditation: Gold</li>
+                        </ul>
+
+                        <p>Use the <a href="https://accorevents.com/offers/rust-forge-conference-2025">dedicated booking portal</a> to access special rates.</p>
+                    </div>
+                    <div class="feature-box__footer">
+                        <div class="feature-box__footer-blocks">
+                            <a class="feature-box__footer-block-solid" target="_blank" href="https://accorevents.com/offers/rust-forge-conference-2025">
+                                Book ibis</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feature-box" id="novotel"> <!-- [gold] [850m] -->
+                    <div class="feature-box__body">
+
+                        <h3 class="feature-box__heading">
+                            <strong>Hotel</strong>
+                            <em>
+                                <a href="https://all.accor.com/hotel/3276/index.en.shtml">Novotel Wellington</a>
+                            </em>
+                        </h3>
+
+                        <ul class="plus">
+                            <li>Prices: 175-260/night (indicative)</li>
+                            <li>Distance: 12 minutes' walk from venue (850m / 0.5 miles).</li>
+                            <li>Address: 133 The Terrace, Wellington</li>
+                            <li>Google Business Profile rating: 4 star</li>
+                            <li>Qualmark rating: 4 star plus</li>
+                            <li>Qualmark sustainability accreditation: Gold</li>
+                        </ul>
+
+                        <p>Use the <a href="https://accorevents.com/offers/rust-forge-conference-2025">dedicated booking portal</a> to access special rates.</p>
+                    </div>
+                    <div class="feature-box__footer">
+                        <div class="feature-box__footer-blocks">
+                            <a class="feature-box__footer-block-solid" target="_blank" href="https://accorevents.com/offers/rust-forge-conference-2025">
+                                Book Novotel</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feature-box" id="rydges"> <!-- [silver] [550m] -->
+                    <div class="feature-box__body">
+
+                        <h3 class="feature-box__heading">
+                            <strong>Hotel</strong>
+                            <em>
+                                <a href="https://www.rydges.com/accommodation/new-zealand/wellington/">Rydges Wellington</a>
+                            </em>
+                        </h3>
+
+                        <ul class="plus">
+                            <li>Prices: NZD 220-750/night (indicative)</li>
+                            <li>Distance: 8 minutes' walk from venue (550m / 0.3 miles).</li>
+                            <li>Address: 75 Featherston Street, Wellington</li>
+                            <li>Rating: 4 Star</li>
+                            <li>Qualmark rating: 4 Star Plus</li>
+                            <li>Qualmark sustainability accreditation: Silver</li>
+                        </ul>
+
+                        <p>Use the <a href="https://www.rydges.com/private-page/rust-forge/">dedicated booking portal</a> to access special rates.</p>
+                    </div>
+                    <div class="feature-box__footer">
+                        <div class="feature-box__footer-blocks">
+                            <a class="feature-box__footer-block-solid" target="_blank" href="https://www.rydges.com/private-page/rust-forge/">
+                                Book Rydges</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feature-box" id="travelodge"> <!-- [silver] [700m] -->
                     <div class="feature-box__body">
 
                         <h3 class="feature-box__heading">
@@ -2023,6 +2132,7 @@
                             <li>Prices: NZD 165-270/night (indicative)</li>
                             <li>Distance: 10 minutes' walk from venue (700m / 0.4 miles).</li>
                             <li>Address: 2/6 Gilmer Terrace, Wellington</li>
+                            <li>Rating: 4 star</li>
                             <li>Qualmark rating: 4 star</li>
                             <li>Qualmark sustainability accreditation: Silver</li>
                             <li>All rooms are equipped with a kitchenette with microwave, fridge, plates, cutlery and kettle.</li>
@@ -2039,7 +2149,7 @@
                     </div>
                 </div>
 
-                <div class="feature-box">
+                <div class="feature-box" id="citylife"> <!-- [silver] [700m]-->
                     <div class="feature-box__body">
 
                         <h3 class="feature-box__heading">
@@ -2053,6 +2163,7 @@
                             <li>Prices: NZD 200-430/night (indicative)</li>
                             <li>Distance: 10 minutes' walk from venue (700m / 0.4 miles).</li>
                             <li>Address: 300 Lambton Quay, Wellington</li>
+                            <li>Rating: 4 star</li>
                             <li>Qualmark rating: 4 star</li>
                             <li>Qualmark sustainability accreditation: Silver</li>
                             <li>Most rooms have a full kitchen, washer &amp; dryer.</li>
@@ -2069,65 +2180,34 @@
                     </div>
                 </div>
 
-                <div class="feature-box">
+                <div class="feature-box" id="intercontinental"><!-- [none] [200m] -->
                     <div class="feature-box__body">
 
                         <h3 class="feature-box__heading">
                             <strong>Hotel</strong>
                             <em>
-                                <a href="https://all.accor.com/hotel/3276/index.en.shtml">Novotel Wellington</a>
+                                <a href="https://www.ihg.com/intercontinental/hotels/gb/en/wellington/wlggs/hoteldetail">InterContinental Wellington</a>
                             </em>
                         </h3>
 
                         <ul class="plus">
-                            <li>Prices: 175-260/night (indicative)</li>
-                            <li>Distance: 12 minutes' walk from venue (850m / 0.5 miles).</li>
-                            <li>Address: 133 The Terrace, Wellington</li>
-                            <li>Qualmark rating: 4 star plus</li>
-                            <li>Qualmark sustainability accreditation: Gold</li>
+                            <li>Prices: NZD 310-460/night (indicative)</li>
+                            <li>Distance: 3 minutes' walk from venue (200m / 0.1 miles).</li>
+                            <li>Address: 75 Featherston Street, Wellington</li>
+                            <li>Google Business Profile Rating: 5 Star</li>
                         </ul>
 
-                        <p>Use the <a href="https://accorevents.com/offers/rust-forge-conference-2025">dedicated booking portal</a> to access special rates.</p>
+                        <p>Use the <a href="https://www.ihg.com/intercontinental/hotels/gb/en/find-hotels/select-roomrate?fromRedirect=true&qSrt=sBR&qIta=99801505&icdv=99801505&qSlH=wlggs&qCiD=26&qCiMy=072025&qCoD=31&qCoMy=072025&qGrpCd=RFC&setPMCookies=true&qSHBrC=IC&qDest=2%20Grey%20Street,%20Wellington,%20NZ&srb_u=1&qRmFltr=">dedicated booking portal</a> to access special rates.</p>
                     </div>
                     <div class="feature-box__footer">
                         <div class="feature-box__footer-blocks">
-                            <a class="feature-box__footer-block-solid" target="_blank" href="https://accorevents.com/offers/rust-forge-conference-2025">
-                                Book Novotel</a>
+                            <a class="feature-box__footer-block-solid" target="_blank" href="https://www.ihg.com/intercontinental/hotels/gb/en/find-hotels/select-roomrate?fromRedirect=true&qSrt=sBR&qIta=99801505&icdv=99801505&qSlH=wlggs&qCiD=26&qCiMy=072025&qCoD=31&qCoMy=072025&qGrpCd=RFC&setPMCookies=true&qSHBrC=IC&qDest=2%20Grey%20Street,%20Wellington,%20NZ&srb_u=1&qRmFltr=">
+                                Book InterContinental</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="feature-box">
-                    <div class="feature-box__body">
-
-                        <h3 class="feature-box__heading">
-                            <strong>Hotel</strong>
-                            <em>
-                                <a href="https://all.accor.com/hotel/3049/index.en.shtml">ibis Wellington</a>
-                            </em>
-                        </h3>
-
-                        <p>3.5-star economy hotel in the city.</p>
-
-                        <ul class="plus">
-                            <li>Prices: NZD 150-180/night (indicative)</li>
-                            <li>Distance: 3 minutes' walk from venue (400m / 0.7 miles).</li>
-                            <li>Address: 153 Featherston Street, Wellington</li>
-                            <li>Qualmark rating: 3 star plus</li>
-                            <li>Qualmark sustainability accreditation: Gold</li>
-                        </ul>
-
-                        <p>Use the <a href="https://accorevents.com/offers/rust-forge-conference-2025">dedicated booking portal</a> to access special rates.</p>
-                    </div>
-                    <div class="feature-box__footer">
-                        <div class="feature-box__footer-blocks">
-                            <a class="feature-box__footer-block-solid" target="_blank" href="https://accorevents.com/offers/rust-forge-conference-2025">
-                                Book ibis</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="feature-box">
+                <div class="feature-box" id="haka-house"> <!-- [none] [1100m] -->
                     <div class="feature-box__body">
 
                         <h3 class="feature-box__heading">
