--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -1070,8 +1070,9 @@
         }
 
         /**
-        *  SECTION - SPONSORS AND SUPPORTERS
-        */
+        *  SECTION - SPONSORS
+        *  SECTION - SUPPORTERS
+        * -------------------------------------------------------- */
         .supporter-tier-heading {
             text-align: center;
             max-width: 40rem;
@@ -1543,22 +1544,6 @@
                     <li>John Funk, Underscore Funk Design</li>
                 </ul>
             </div>
-
-            <h3>Travel Partners</h3>
-            <div class="supporter-logos">
-                <img src="assets/images/sponsors/cathay.png">
-                <img src="assets/images/sponsors/qantas.svg">
-            </div>
-
-            <h3>Special Thanks</h3>
-            <p>
-                A huge thank you to Wellington's regional tourism agency, WellingtonNZ and its Business Events Wellington team
-                for facilitating so many connections that have enabled this event.
-            </p>
-            <div class="supporter-logos">
-                <img src="assets/images/sponsors/wellingtonnz.svg">
-                <img src="assets/images/sponsors/business-events-wellington.png">
-            </div>
         </div>
 
         <div class="section" id="where-and-when">
@@ -1600,12 +1585,12 @@
                 </div>
                 <div>
                     <ul class="plus">
-                        <li>Host your team in one of our Team Spaces</li>
-                        <li>Attend the Conference</li>
-                        <li>Gather and connect during the Spaces In-between</li>
-                        <li>Support the conference by becoming a Sponsor</li>
-                        <li>Participate in a Workshop</li>
-                        <li>Lend your voice and Submit a Paper to become a speaker.</li>
+                        <li>Host your team in one of our <a href="#spaces">Team Spaces</a></li>
+                        <li><a href="https://rust-forge-2025.lilregie.com/">Attend the Conference</a></li>
+                        <li>Gather and connect during the <a href="#networking">Spaces In-between</a></li>
+                        <li>Support the conference by <a href="#support-levels">becoming a Sponsor</a></li>
+                        <li>Participate in a <a href="#workshop">Workshop</a></li>
+                        <li>Lend your voice and <a href="https://pretalx.com/rust-forge-2025/cfp">Submit a Paper</a> to become a speaker.</li>
                     </ul>
                 </div>
             </div>
@@ -2565,6 +2550,35 @@
 
             </div>
         </div> <!-- /#interested -->
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <div class="section">
+            <h2>Event Supporters</h2>
+            <p>
+                Thank you to the many people who are supporting the event in its inaugural year.
+                Rust Forge Conf 2025 is going to be a special event, in large part because of
+                the invisible effort of many people.
+            </p>
+
+            <h3>Travel Partners</h3>
+            <div class="supporter-logos">
+                <img src="assets/images/sponsors/cathay.png">
+                <img src="assets/images/sponsors/qantas.svg">
+            </div>
+
+            <h3>Special Thanks</h3>
+            <p>
+                A huge thank you to Wellington's regional tourism agency, WellingtonNZ and its Business Events Wellington team
+                for facilitating so many connections that have enabled this event.
+            </p>
+            <div class="supporter-logos">
+                <img src="assets/images/sponsors/wellingtonnz.svg">
+                <img src="assets/images/sponsors/business-events-wellington.png">
+            </div>
+        </div>
     </div>
 </div>
 
